adding images + a few corrections to the document
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@4678 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/Papers/ICMC2009-dbap/icmc2009-dbap.tex
+++ b/Papers/ICMC2009-dbap/icmc2009-dbap.tex
@@ -113,7 +113,7 @@ about 150 words.
 
 \section{Introduction}\label{sec:introduction}
 
-The use of multichannel and surround sound reproduction is getting ever more common, for consumer applications as well as musical and artistic purposes. A number of techniques exists for virtual positioning of sound sources using an array of loudspeakers. A common assumption of techniques for spatialisation is that the position of the listener is known and fixed, and the speakers are surrounding the listener either on a two-dimensional ring or a three-dimensional sphere. Examples of such speaker layouts and spatialisation techniques are stereo panning, 5.1-channel surround \cite{ITU:1993_surround_5:1}, further extended industrial multichannel configurations \cite{Rumsey:2001spatial_audio}, vector-based amplitude panning (VBAP) \cite{Pulkki:1997vbap} and first and higher-order ambisonics \cite{Gerzon:1974surround, Poletti:2000holographic_sound}.
+The use of multichannel and surround sound reproduction is getting ever more common, for consumer applications as well as musical and artistic purposes. A number of techniques exist for virtual positioning of sound sources using an array of loudspeakers. A common assumption of techniques for spatialisation is that the position of the listener is known and fixed, and the speakers are surrounding the listener either on a two-dimensional ring or a three-dimensional sphere. Examples of such speaker layouts and spatialisation techniques are stereo panning, 5.1-channel surround \cite{ITU:1993_surround_5:1}, further extended industrial multichannel configurations \cite{Rumsey:2001spatial_audio}, vector-based amplitude panning (VBAP) \cite{Pulkki:1997vbap} and first and higher-order ambisonics \cite{Gerzon:1974surround, Poletti:2000holographic_sound}.
 
 Wave field synthesis (WFS) is a noticeable exception to the above sweet spot restriction, reproducing signals resulting in a large listening area. The spatial properties of the acoustical scene can be perceived correctly by an arbitrary large number of listeners regardless of their position inside this area \cite{Spors:2004sound_field_synthesis}.
 
@@ -249,13 +249,13 @@ The authors are also looking forward to obtaining a better numerical representat
 
 \subsection{Visual representation}
 
-In order to allow intuitive understanding and manipulation of the algorithm for the users, the authors developped a visual representation of the behaviour of the algorithm, using gradients to represent the "predominance" of each speaker according to the signal spreading. This is intended to give a more intuitive manipulation of source positions, as well as managing parameters such as spatial blur, rolloff, or spatial weights, that can sound rather abstract to the non-scientific.
+In order to allow intuitive understanding and manipulation of the algorithm by the users, the authors developped a visual representation of the behaviour of the algorithm, using gradients to represent the "predominance" zone of each speaker according to the signal spreading. This is intended to give a more intuitive manipulation of source positions, as well as managing parameters such as spatial blur, rolloff, or spatial weights, that can sound rather abstract to the non-scientific.
 
 
-For each pixel of a selected view matrix (of X * Y pixels), the pixel value is set to the  squared amplitude returned by the dbap algorithm as if a source was at this position. The visual result is a picture that show to the user the spatial response of  a loudspeaker. The lighter pixels are positions where amplitudes is closed to 1. and the darker ones, positions where amplitudes are closed to 0.. As expected, the far the source is from the loudspeaker, the less is the amplitude. However the presence of “digs” in the spatial distribution of the amplitude response illustrates how the dbap algorithm works when a source moves between several loudspeakers. Those graphical informations, even esthetic there are, give to the user a kind of hitmap that could assists him during space writing and performance time.
+For each pixel of a selected view matrix (of X * Y pixels), the pixel value is set to the  squared amplitude returned by the dbap algorithm as if a source was at this position. The visual result is a picture that shows to the user the spatial response of  a loudspeaker. The lighter pixels are positions where amplitudes are close to 1. and the darker ones, positions where amplitudes are close to 0.. As expected, the more far the source is from the loudspeaker, the less high is the amplitude. However the presence of “digs” in the spatial distribution of the amplitude response illustrates how the dbap algorithm works when a source moves between several loudspeakers. Those graphical informations, even aesthetic there are, give to the user a kind of hitmap that could assist him during space scripting and performing.
 
 
-But those pictures of spatial response of each loudspeaker need to be shown together in one visualization. The layout “fusion” method chosen is a max operation between each pixel of each pictures. The graphical result show straight segmented parts in space corresponding to every spatial influence zones of loudspeakers. Here the darker pixels have to be explain as positions where the source is equal mixed between the closest loudspeakers. The following pictures illustrate several settings of rolloff and blur parameters on all loudspeakers. The last picture illustrates a weights preset that keep only five loudspeakers set with different weights.
+But those pictures of spatial response of each loudspeaker need to be shown together in one visualization. The layout “fusion” method chosen is a max operation between each pixel of each pictures. The graphical result show sstraight segmented parts in space corresponding to every spatial influence zones of loudspeakers. Here the darker pixels have to be explain as positions where the source is equal mixed between the closest loudspeakers. The following figures illustrate several settings of rolloff and blur parameters on all loudspeakers. The last picture illustrates a weights preset that keeps only five loudspeakers set with different weights for each of them.
 
 
 \subsection{Convex Hull}
