Adding reference, working on chapter 2
git-svn-id: https://jamoma.svn.sourceforge.net/svnroot/jamoma/branches/active@4679 464221e2-0a0f-0410-983b-f8d57d210c17

--- a/Papers/ICMC2009-dbap/icmc2009-dbap.bib
+++ b/Papers/ICMC2009-dbap/icmc2009-dbap.bib
@@ -2,12 +2,33 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for lossius at 2009-02-08 23:32:06 +0100 
+%% Created for lossius at 2009-02-09 00:35:05 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{Litovsky:1999precedence_effect,
+	Abstract = {In a reverberant environment, sounds reach the ears through several paths. Although the direct sound is followed by multiple reflections, which would be audible in isolation, the first-arriving wavefront dominates many aspects of perception. The "precedence effect" refers to a group of phenomena that are thought to be involved in resolving competition for perception and localization between a direct sound and a reflection. This article is divided into five major sections. First, it begins with a review of recent work on psychoacoustics, which divides the phenomena into measurements of fusion, localization dominance, and discrimination suppression. Second, buildup of precedence and breakdown of precedence are discussed. Third measurements in several animal species, developmental changes in humans, and animal studies are described. Fourth, recent physiological measurements that might be helpful in providing a fuller understanding of precedence effects are reviewed. Fifth, a number of psychophysical models are described which illustrate fundamentally different approaches and have distinct advantages and disadvantages. The purpose of this review is to provide a framework within which to describe the effects of precedence and to help in the integration of data from both psychophysical and physiological experiments. It is probably only through the combined efforts of these fields that a full theory of precedence will evolve and useful models will be developed.},
+	Address = {Hearing Research Center, Boston University, Massachusetts 02215, USA. litovsky@bu.edu},
+	Author = {Litovsky, R. Y. and Colburn, H. S. and Yost, W. A. and Guzman, S. J.},
+	Citeulike-Article-Id = {1015040},
+	Comment = {Available online for free here: http://www.waisman.wisc.edu/~litovsky/papers/1999-3.pdf},
+	Date-Added = {2009-02-09 00:33:38 +0100},
+	Date-Modified = {2009-02-09 00:33:38 +0100},
+	Issn = {0001-4966},
+	Journal = {Journal of the Acoustical Society of America},
+	Keywords = {psychoacoustics, spatialisation},
+	Month = {October},
+	Number = {4 Pt 1},
+	Pages = {1633--1654},
+	Priority = {3},
+	Title = {The precedence effect.},
+	Url = {http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve\&db=pubmed\&dopt=Abstract\&list_uids=10530009},
+	Volume = {106},
+	Year = {1999},
+	Bdsk-Url-1 = {http://www.ncbi.nlm.nih.gov/entrez/query.fcgi?cmd=Retrieve%5C&db=pubmed%5C&dopt=Abstract%5C&list_uids=10530009}}
 
 @book{Rourke:1998_geometry,
 	Author = {Joseph O'Rourke},
